cluster/apps/default/open-webui/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  namespace: default
spec:
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: open-webui
